# mandelbrot-set

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  benchmark.py
include/: util.h
include/escapeTime/: ImageTransformGrid.h  coloring.h  escapeTimeCuda.h  escapeTimeSequential.h  mandelbrotImageTransformGrid.h  types.h
include/mandelbrotDisplay/: color.h
include/mandelbrot_algorithms/: types.h
lib/: CMakeLists.txt
lib/escapeTime/: CMakeLists.txt  README.md  coloringFunctions.cu  coloringFunctions.cuh  coloringFunctionsHost.h  escapeTimeCuda.cu  escapeTimeCuda.cuh  escapeTimeCuda.h  escapeTimeCudaWrapper.h  escapeTimeSequential.cpp  escapeTimeSequential.h  mandelbrotImageTransformGrid.cpp  mandelbrotImageTransformGrid.cu
lib/escapeTime/benchmark/: CMakeLists.txt  README.md  benchmarkEscapeTIme.cpp
lib/escapeTime/test/: CMakeLists.txt  cudaEscapeTimeTests.cpp  escapeTimeTests.cpp  imageTransformGridTests.cpp
src/: CMakeLists.txt  interactableImage.cpp  interactableImage.h  interactableImageView.cpp  interactableImageView.h  mandelbrotViewer.cpp  mandelbrotViewer.h  mandelbrotViewer.ui  test.cpp  testcuda.cpp  testcuda.h
src/mandelbrot_algorithms/: CMakeLists.txt  README.md  escapeTime.h  escapeTimeCuda.cu  types.h
